--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh": "^2.8.9",
     "gh-pages": "^6.3.0",
+    "pages": "^0.0.16",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
